# ai-novel-translation

./: .gitignore  Cargo.toml  Readme.md  config.yml
glossaries/: chapter_01.json  chapter_02.json
src/: llm.rs  main.rs
